fix(): External feeding and dark mode colors

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -33,11 +33,16 @@
 :root[data-bs-theme=light] {
   --body-bg: #d7d7d7;
   --body-bg-rgb: 215, 215, 215;
+  --footer-link: #ddd;
 }
+
 
 :root[data-bs-theme=dark] {
   --body-bg: #4d4c4c;
   --body-bg-rgb: rgb(77, 76, 76);
+  --bs-body-color: #eeeaea !important;
+  --bs-secondary-color: rgb(173, 181, 189);
+  --footer-link: #ddd;
 }
 
 .navbar {
@@ -79,6 +84,14 @@ font-family: PersonalZoo, Arial, Verdana, sans-serif;
 font-size: 14px;
 height: 100%;
 background-color: var(--body-bg);
+}
+
+footer {
+  background-color: var(--zoo-green);
+}
+
+footer a {
+  color: var(--footer-link);
 }
 
 .center {
